<resources>
    <string name="app_name">Ejercicio Individual 3 Calculadora</string>
    <string name="n_mero_1">Número 1</string>
    <string name="n_mero_2">Número 2</string>
    <string name="sumar">Sumar</string>
    <string name="restar">Restar</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="dividir">Dividir</string>
    <string name="resultado">Resultado:</string>
    <string name="by_jonny_java">by Jonny JaVa</string>
    <string name="todo">TODO</string>
</resources>